fix display of arabic text on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -135,31 +135,34 @@ footer.mainfooter {
     background: #f6f6f6;
   }
 }
-.container{
+
+.container {
   margin-top: 50px;
-  box-shadow: 0px 4px 7px 0px rgba(214,214,214,1);
+  box-shadow: 0px 4px 7px 0px rgba(214, 214, 214, 1);
   padding: 30px !important;
   background-color: white !important;
 }
+
 .card-title {
-    color: #AB752F !important;
-  
+  color: #AB752F !important;
+
 }
-.card{
-    border: unset !important;
-    height: 100% !important;
-    border-bottom: 1px solid beige !important;
+
+.card {
+  border: unset !important;
+  height: 100% !important;
+  border-bottom: 1px solid beige !important;
 }
 
 span.imelekcije {
   float: left;
-    font-size: 27px;
-    font-weight: 400;
-    color: #AB752F;
-    display: inline-block;
-    width: 2em;
-    padding-right: 1rem;
-    margin-right: 1em;
+  font-size: 27px;
+  font-weight: 400;
+  color: #AB752F;
+  display: inline-block;
+  width: 2em;
+  padding-right: 1rem;
+  margin-right: 1em;
 }
 
 /* MENI */
@@ -236,45 +239,61 @@ ul.bottomMenu {
   left: 0;
   right: 0;
 }
+
 /*FRONT PAGE*/
-.wrapper{
+.wrapper {
   width: 100%;
 }
+
 /*TOP NAV*/
-.topNav{
+.topNav {
   width: 100%;
   height: 123px;
 }
-.pristupiBtn{
+
+.pristupiBtn {
   position: absolute;
-    right: 45px;
-    top: 45px;
-    width: 103px;
-    height: 30px;
-    background-color: white;
-    border: 2px slolid #AB752F;
-    border-radius: 40px;
-    border: 2px solid #AB752F;
+  right: 45px;
+  top: 45px;
+  width: 103px;
+  height: 30px;
+  background-color: white;
+  border: 2px slolid #AB752F;
+  border-radius: 40px;
+  border: 2px solid #AB752F;
 }
-.height50px{
+
+.height50px {
   height: 50px;
 }
-h3{
+
+h3 {
   font-size: 17px;
 }
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .container{
+  .row {
+    margin: 0px !important;
+  }
+
+  .mobile-row {
+    display: block;
+  }
+
+  .container {
     width: 90% !important;
     padding: 0px !important;
     margin-bottom: 90px;
   }
-  span.imelekcije{
+
+  span.imelekcije {
     font-size: 38px !important;
     margin-right: unset !important;
     margin-left: unset !important;
   }
-  .pristupiBtn{
+
+  .pristupiBtn {
     position: unset;
     right: 45px;
     top: 45px;
@@ -286,37 +305,43 @@ h3{
     border: 2px solid #AB752F;
     margin-top: 15px;
   }
-  .card{
+
+  .card {
     height: 100% !important;
   }
-  .card-subtitle{
-    
-  }
-  .sectonRight{
+
+  .card-subtitle {}
+
+  .sectonRight {
     float: right;
     width: 69% !important;
   }
-  .col{
+
+  .col {
     padding-right: unset !important;
     padding-left: unset !important;
   }
-  .row{
+
+  .row {
     width: 90% !important;
     margin: auto !important;
-    margin-top: -19px !important;
   }
 }
-.lekcijaTop{
+
+.lekcijaTop {
   margin-top: -18px;
   color: #92623C;
-  h2{
+
+  h2 {
     font-size: 27px;
   }
 }
-h2 strong{
+
+h2 strong {
   font-size: 27px;
 }
-.btnRight{
+
+.btnRight {
   width: 30px;
   margin-top: 0px;
   /* left: 0; */
@@ -326,38 +351,47 @@ h2 strong{
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
-.mobileTop{
+
+.mobileTop {
   display: none;
 }
-.mobilefooter{
+
+.mobilefooter {
   display: none;
 }
-.hide{
+
+.hide {
   display: none;
 }
 
 @media only screen and (max-width: 600px) {
-  h4{
+  h4 {
     font-size: 15px !important;
   }
-  .height50px{
+
+  .height50px {
     display: none;
   }
-  .mobileTop{
+
+  .mobileTop {
     display: unset;
     margin-top: 15px;
-    h2{
+
+    h2 {
       font-size: 15px;
     }
-    img{
+
+    img {
       margin: auto;
     }
-    
+
   }
-  .mainfooter{
+
+  .mainfooter {
     display: none;
   }
-  .mobilefooter{
+
+  .mobilefooter {
     display: unset;
     position: fixed;
     bottom: 0;
@@ -365,22 +399,26 @@ h2 strong{
     width: 100%;
     height: 70px;
     background-color: #8A552B;
-    .mobileNavButtons{
+
+    .mobileNavButtons {
       position: relative;
-    /* bottom: 10px; */
-    margin-top: 20px !important;
-    justify-content: center;
+      /* bottom: 10px; */
+      margin-top: 20px !important;
+      justify-content: center;
     }
   }
-  .mobNavSearch{
+
+  .mobNavSearch {
     float: right;
     margin-top: 28px;
     margin-right: 10%;
   }
-  .arapski{
+
+  .arapski {
     font-size: 19px !important;
   }
-  .arapski-lekcija{
+
+  .arapski-lekcija {
     font-size: 19px !important;
   }
 }
